moved search to left and made box smaller to avoid overlaps

--- a/libsrc/scss/nav.scss
+++ b/libsrc/scss/nav.scss
@@ -97,6 +97,17 @@ body.home.logged_out .nav{
 .has_count img {
   float: left;
 }
+#search {
+   padding: 6px 0 6px 10px;
+   position: relative;
+   display: inline-block;
+}
+.logged_out #search {
+    left: -25px;
+}
+#search_box {
+    width: 150px;
+}
 #search_submit {
   display: inline-block;
   width: 22px;
